# SIV

./: Makefile  Makefile.am  config.h  config.status  libtool
doc/: Makefile
examples/: Makefile
examples/snippets/: Makefile
exercises/: Makefile  Makefile.am
exercises/runcmd/: Makefile
exercises/runcmd/lib/: Makefile
exercises/runcmd/test/: Makefile
exercises/shell/: Makefile
exercises/shell/foosh/: Makefile
exercises/shell/tests/: Makefile
extras/: Makefile
lib/: Makefile  libposixeg.la
lib/.deps/: core.Plo  list.Plo  parser.Plo
lib/.libs/: libposixeg.0.dylib  libposixeg.dylib  libposixeg.la  libposixeg.lai
tools/: Makefile
